.kubernetes/deployment.yml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshop
  namespace: workshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workshop
  template:
    metadata:
      labels:
        app: workshop
    spec:
      containers:
      - name: workshop
        image: jarzamendia/workshop:003
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "32Mi"
            cpu: "0.1"
          limits:
            memory: "256Mi"
            cpu: "0.2"
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
